# ContAIned

./: .env.example  .gitignore  .gitmodules  README.md  agent.md  pyproject.toml
.github/workflows/: evalops.yml
common/: __init__.py
common/clients/: __init__.py  inference.py  litellm.py  neo4j.py  postgres.py  qdrant.py  redis.py
common/config/: __init__.py  settings.py
common/observability/: __init__.py  exceptions.py  limiter.py  logger.py  middleware.py  tracing.py
common/schemas/: __init__.py  agent_types.py  api.py  inference_contracts.py  model_registry.py
common/services/: agent_runtime.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AgentHub.tsx  EvalPanel.tsx  IngestionPanel.tsx  MCPHubPage.tsx  NotFound.tsx  PlaygroundPage.tsx  PropertyDrawer.tsx  Sidebar.tsx  (+3 more)
gateway/: __init__.py  main.py
gateway/api/: __init__.py  agent_crud.py  agent_invoke.py  api_keys.py  external.py  health.py  mcp_manager.py  models.py  playground.py  telemetry.py
gateway/auth/: __init__.py  api_key_middleware.py  dependencies.py  middleware.py  providers.py  routes.py  utils.py
gateway/core/: setup.py
gateway/services/: mcp_client.py
gateway/tests/: test_api_key_management.py  test_external_api.py  test_mcp_discovery.py  test_mcp_invoke.py  test_mcp_manager.py
inference/: __init__.py  main.py
inference/core/: __init__.py  downloader.py  vram_manager.py
inference/routes/: __init__.py  classify.py  embed.py  ocr.py  transcribe.py
infrastructure/: Dockerfile.gateway  Dockerfile.inference  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  init-db.sql
migrations/: env.py
migrations/versions/: 3c291ab4e81e_add_guardroute_tables.py  7d3140d819a9_add_syntraflow_file_hash.py  7e992fb9475e_add_workflows_table.py  85e2f0c51f71_add_eval_attribution_tables.py  a42f693903ac_add_api_keys_table.py  d1ea753fbd9d_add_agent_definitions.py  d2e57c967822_initial_baseline.py  e9f1a2b3c4d5_v5_auth_models.py  f1a2b3c4d5e6_v5_evalops_and_invocation_schemas.py  f2b3c4d5e6f7_v5_agent_crud_enhancements.py  f3c4d5e6f7a8_add_playground_sessions.py  f4d5e6f7a8b9_add_mcp_integration_hub_tables.py
projects/: __init__.py
requirements/: common.md  evalops.md  frontend.md  guardroute.md  inference.md  infrastructure.md  models.md  security.md  syntraflow.md  system.md  work_principle.md  work_verification.md
scripts/: deploy.py
tests/: test_agent_api.py  test_agent_crud_v5.py  test_agent_invoke.py  test_agent_runtime_sync.py  test_agent_schemas.py  test_auth.py  test_decoupling.py  test_error_handling.py  test_eval_schemas.py  test_inference_contracts.py  test_playground.py  test_telemetry_ws.py  test_v2_evalops_pipeline.py  test_v2_graph_parser.py  test_v2_ingestion_strategies.py  test_workflow_sync.py
tests/fixtures/: grpo_eval_data.json  injection_payloads.json
(+50 files in other folders)
