[project]
name = "akshat-ai-platform"
version = "0.1.0"
description = "Monorepo for SyntraFlow, GuardRoute, and EvalOps"
authors = [{name = "Akshat Tilak"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # --- Shared base (all projects use these) ---
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn (>=0.30.0,<1.0.0)",
    "pydantic (>=2.9.0,<3.0.0)",
    "pydantic-settings (>=2.5.0,<3.0.0)",
    "sqlalchemy (>=2.0.30,<3.0.0)",
    "asyncpg (>=0.29.0,<1.0.0)",
    "qdrant-client (>=1.11.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "opentelemetry-api (>=1.25.0,<2.0.0)",
    "opentelemetry-sdk (>=1.25.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.46b0,<1.0.0)",
    "litellm (>=1.40.0,<2.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "numpy (>=1.26.0,<3.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "redis[hiredis] (>=5.0.0,<6.0.0)",
    "huggingface-hub (>=0.23.0,<1.0.0)",
    "neo4j (>=5.20.0,<6.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
]

[project.optional-dependencies]
syntraflow = [
    "langchain (>=0.3.0,<1.0.0)",
    "langgraph (>=0.2.0,<1.0.0)",
    "sentence-transformers (>=3.0.0,<4.0.0)",
    "mcp (>=0.1.0,<1.0.0)",
    "confluent-kafka (>=2.4.0,<3.0.0)",
    "ffmpeg-python (>=0.2.0,<1.0.0)",
    "pydub (>=0.25.1,<1.0.0)",
]

guardroute = [
    "langchain (>=0.3.0,<1.0.0)",
    "langgraph (>=0.2.0,<1.0.0)",
    "mcp (>=0.1.0,<1.0.0)",
    "confluent-kafka (>=2.4.0,<3.0.0)",
    "duckduckgo-search (>=6.0.0,<7.0.0)",
    "RestrictedPython (>=7.0,<8.0)",
    "sse-starlette (>=2.0.0,<3.0.0)",
    "tiktoken (>=0.7.0,<1.0.0)",
]

inference = [
    "transformers (>=4.49.0,<5.0.0)",
    "torch (>=2.3.0,<3.0.0)",
]

evalops = [
    "deepeval (>=4.0.5,<5.0.0)",
    "ragas (>=0.2.0,<1.0.0)",
    "confluent-kafka (>=2.4.0,<3.0.0)",
]

[tool.poetry]
packages = [
    {include = "projects"},
    {include = "common"},
    {include = "gateway"},
    {include = "inference"},
]

[tool.poetry.dependencies]
llama-cpp-python = { version = ">=0.2.76,<1.0.0", source = "llama-cpp-cpu" }

[[tool.poetry.source]]
name = "llama-cpp-cpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
black = ">=24.8.0"
ruff = ">=0.6.0"
mypy = ">=1.11.0"
pytest = ">=8.3.0"
pytest-mock = ">=3.14.0"
pytest-asyncio = ">=0.24.0"

# Black Code Formatter Configuration
[tool.black]
line-length = 88
target-version = ['py311', 'py312']

# Import Sorting Configuration
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["projects", "common", "gateway", "inference"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
